welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:7: error: reassignment to val
    	c=Color.pink
         ^SlugSnail:10: error: reassignment to val
    	c=Color.orange
         ^